lignes terrains de sport à partir du zoom 15

--- a/osmfr.yml
+++ b/osmfr.yml
@@ -440,8 +440,8 @@ Layer:
 
   - id: sports
     <<: *extents
-    propeties:
-      minzoom: 14
+    properties:
+      minzoom: 15
     Datasource:
       <<: *osm2pgsql
       table: >-
